fix background color overflow issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,7 +33,6 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  height: 100vh;
   background: #66A1D8;
 }
 
